Bug 145811 - Painting glitches when scrolling around entered OLE object on macOS in Skia Raster mode
Summary: Painting glitches when scrolling around entered OLE object on macOS in Skia R...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.3.0.0 alpha0+
Hardware: All macOS (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.4.0 target:7.3.0.0.beta2
Keywords:
Depends on:
Blocks: Skia-macOS
  Show dependency treegraph
 
Reported: 2021-11-21 11:56 UTC by Telesto
Modified: 2024-06-17 11:31 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file (16.09 KB, application/vnd.oasis.opendocument.spreadsheet)
2021-11-21 11:56 UTC, Telesto
Details
2021-12-01 main build tested (497.69 KB, image/png)
2021-12-01 13:28 UTC, steve
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2021-11-21 11:56:06 UTC
Description:
Painting glitches when scrolling around entered OLE object on MacOS in Skia Raster mode

Steps to Reproduce:
1. Open the attached file
2. Double click say 290000 (ole object will be accessed)
3. Scroll left right/up down (in my case with touchpad)

Actual Results:
Stuff is not properly refreshed

Expected Results:
Same as Skia Metal or old rendering


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.3.0.0.alpha1+ / LibreOffice Community
Build ID: 11800469cc7b3a40c42410be93a12e5107db0efb
CPU threads: 8; OS: Mac OS X 10.16; UI render: Skia/Raster; VCL: osx
Locale: nl-NL (nl_NL.UTF-8); UI: en-US
Calc: threaded
Comment 1 Telesto 2021-11-21 11:56:47 UTC
Created attachment 176398 [details]
Example file
Comment 2 Thomas K 2021-11-30 12:41:04 UTC Comment hidden (off-topic)
Comment 3 Thomas K 2021-11-30 12:43:41 UTC Comment hidden (off-topic)
Comment 4 Commit Notification 2021-11-30 21:07:34 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/cdebd76284204f6a34df2a01d4eaedbd540c5fe6

fix Skia copyArea() not coping with coordinates outside (tdf#145811)

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 steve 2021-12-01 13:27:26 UTC
Tried verifying and seeing odd results.
1. open test file
2. double click 29000

new frame with scroll bars appears. scrolling in that frame yet another scroll bar appears. That can't be right. Right?

Use Skia for all rendering (enabled)
Comment 6 steve 2021-12-01 13:28:07 UTC
Created attachment 176629 [details]
2021-12-01 main build tested
Comment 7 Commit Notification 2021-12-03 12:16:20 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/048e3c95f612b4be054711981fde3cdf33e60aea

fix Skia copyArea() not coping with coordinates outside (tdf#145811)

It will be available in 7.3.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 steve 2021-12-11 14:57:10 UTC
@Luboš: What do you think about the remaining problem? Is that expected or should that have been addressed in your patch?
Comment 9 Luboš Luňák 2021-12-14 20:40:50 UTC
(In reply to steve from comment #8)
> @Luboš: What do you think about the remaining problem? Is that expected or
> should that have been addressed in your patch?

The scrollbar? That's unrelated and has nothing to do with Skia.