fix Skia copyArea() not coping with coordinates outside (tdf#145811)

Apparently the call is expected to handle even copies that are
partially outside of the area, e.g. window scrolling seems to do
this occassionally.

Change-Id: I9a06c047f00d6b5b920d61f577baa9181bdc5a2b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/126147
Tested-by: Jenkins
Reviewed-by: Luboš Luňák <l.lunak@collabora.com>
(cherry picked from commit cdebd76284204f6a34df2a01d4eaedbd540c5fe6)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/126130